# PDF-2-Daisy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.docker.txt  requirements.txt  server.py  start.sh
src/: daisy_maker.py  logging_config.py  utils.py
src/audio_process/: audio_processor.py
src/doc_process/: process_doc.py  process_xml.py  text_processor.py
src/model/: README.md  iter-525000-avg-2.pt  prompt.txt
